[metadata]
name = pythia
description = A package for Sunspot Data Analysis.
long_description = file: README.rst
author = Raahul Singh
author_email = raahulsingh002@gmail.com
url = https://github.com/Raahul-Singh/pythia
license = MIT license

[options]
zip_safe = False
packages = find:
install_requires =
    sunpy
