[metadata]
name = pythia
description = A package for Sunspot Data Analysis.
long_description = file: README.rst
author = Raahul Singh
author_email = raahulsingh002@gmail.com
url = https://github.com/Raahul-Singh/pythia
license = MIT license

CLASSIFIERS =
    Development Status :: Pre-alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers/Scientists
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    sunpy

[options.extras_require]
all =
test =
    pytest
    pytest-cov
    pytest-remotedata

[options.package_data]
pythia = data/*
