[metadata]
name = pythia
description = A package for Sunspot Data Analysis.
long_description = file: README.rst
author = Raahul Singh
author_email = raahulsingh002@gmail.com
url = https://github.com/Raahul-Singh/pythia
license = MIT license

CLASSIFIERS =
    Development Status :: Pre-alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers/Scientists
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    sunpy>=2.0.0
    numpy>=1.18.5
    pytest>=5.3.5
    pandas>=1.0.1
    drms>=0.5.7
    zeep>=3.4.0
    matplotlib>=3.2.1
    astropy>=4.0
    scikit-learn>=0.23.1
    torch>=1.6.0
    torchvision>=0.5.0
    pytorch-lightning>=0.9.0
    scipy>=1.4.1
    beautifulsoup4>=4.9.1

[options.extras_require]
all =
test =
    pytest
    pytest-cov
    pytest-remotedata

[options.package_data]
pythia = data/*
